# RDL_denoising

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
examples/DN/: datatgen_DN.ipynb  prediction_with_dfcan_rdl_sim.ipynb  training_with_dfcan_rdl_sim.ipynb
examples/SR/: datagen_dfcan.ipynb  prediction_dfcan.ipynb  train_dfcan.ipynb  train_pu_net.ipynb
examples/SR/logs/fitSR/20250423-222302/train/: events.out.tfevents.1745439932.mgmt01.hpc.2154008.0.v2
examples/SR/logs/fitSR/20250423-222911/train/: events.out.tfevents.1745440175.mgmt01.hpc.2162985.0.v2
examples/SR/logs/fitSR/20250423-225045/train/: events.out.tfevents.1745441462.mgmt01.hpc.2190321.0.v2
examples/SR/logs/fitSR/20250423-225801/train/: events.out.tfevents.1745441906.mgmt01.hpc.2197822.0.v2
examples/trained_models/microtubules/DFCAN_complete/: keras_metadata.pb
examples/trained_models/microtubules/DFCAN_complete/variables/: variables.index
examples/trained_models/microtubules/MT-DN-mid-SNR/: keras_metadata.pb
examples/trained_models/microtubules/MT-DN-mid-SNR/variables/: variables.index
examples/trained_models/microtubules/MT-DN-mid_SNR-with_PU_Net/: keras_metadata.pb
examples/trained_models/microtubules/MT-DN-mid_SNR-with_PU_Net/variables/: variables.index
examples/trained_models/microtubules/MT-PU-Net-SIM/evaluation_metrics/for_corelation_analysis/: evaluation_metrics_ms_ssim.csv
hpc_scripts/: hpc_sr_train.sh  startup_conda.sh
src/rdl_denoising/: caped.yaml  loss_functions.py  model_DFCAN.py  models_clean.py  models_clean_with_unet.py  models_unet.py  read_otf.py  sim_fitting.py
src/rdl_denoising/projection_upsampling_network/: caped.yaml
(+688 files in other folders)
