[metadata]
name = RDL_denoising

description = A simple package to use with caped
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArghaSarker/RDL_denoising
author = Argha Sarker
author_email = argha.sarker.93@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/ArghaSarker/RDL_denoising/issues
    Documentation = https://github.com/ArghaSarker/RDL_denoising#README.md
    Source Code = https://github.com/ArghaSarker/RDL_denoising
    User Support = https://github.com/ArghaSarker/RDL_denoising/issues

[options]
packages = find:
install_requires =
    caped-ai

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
caped.manifest =
    RDL_denoising = rdl_denoising:caped.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
